--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,6 +28,7 @@
           </div>
           <button class="mt-3 btn btn-grn btn-lg rounded-pill" type="submit">Log in</button>
         </form>
+        <p class="mt-3">Don't have an account yet? <a class="link-success" href="/">Sign up!</a></p>
       </div>
 
     </div>
